    a stream URL or an absolute path.
24. Ignore current song in selection when moving selected songs within the play
    queue to play them next.
25. Also show metadata of the current track in the context view if 'title' or
    'artist' are missing, but do not try to fetch information nor lyrics.
26. Switch from freedb.org to gnudb.org

2.4.1
-----
1. Re-enable custom playqueue background. This is broken for 5.12, but that's a
   Qt bug.
2. Look in /usr/lib64/qt5/bin for lrelease
3. Fix deprecation warnings.
4. Enable catagorized view by default, might also be a Qt issue?
5. Remove Encyclopaedia Metallum from lyrics providers, as does not work.

2.4.0
-----
 1. Add 'Read offset' setting for AudioCDs.
 2. Show invalid files in playlists using red text.
 3. Add 'Remove Invalid Tracks' to playlist context menu.
 4. Allow OPML URLs in podcast add URL dialog.
 5. Allow to read local RSS/OPML files in podcast search dialog.
 6. Add action to export current podcast subscriptions to OPML file.
 7. Add searching for radio stations on Community Radio Browser.
 8. Show bits in technical info.
 9. Fix saving, and loading, of custom API keys.
10. Fix saving, and reading back, https:// as MPD music folder.
11. Fix crash when double-clicking outside of table-view (when this is set to
    not stretch columns).
12. Fix greyscale images in notifications.
13. Re-add option to save lyrics in music folder.
14. Show Original Year in context view metadata.
15. Add --fullscreen command-line option to start fullscreen.
16. For genres listed in "Composer Support" tweak, shown composer instead of
    artist in context view and toolbar.
17. When listing albums in context view, if can't find and for artist, try
    composer.
18. When downloading podcasts, use whole path for filename.
19. When subscribing to a podcast, check if there are any downloaded episodes
    from a previous subscription.
20. Apply 'Single Tracks' tweak to play queue items.
21. Parse more fields from CUE files.