@@ -37,6 +37,7 @@
 25. Also show metadata of the current track in the context view if 'title' or
     'artist' are missing, but do not try to fetch information nor lyrics.
 26. Switch from freedb.org to gnudb.org
+27. Update bitrate settings for encoders used with transcoding jobs.
 
 2.4.1
 -----
